--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -220,7 +220,7 @@ monitor_no_na$day_type <- c('weekend', 'weekday')[(weekdays(monitor_no_na$date)
 paste("The data set contains ", sum(monitor_no_na$day_type == 'weekday'), "weekdays and ", sum(monitor_no_na$day_type == 'weekend'), "weekend days.")
 ```
 
-
+Now we'll plot weekday results versus weekend results by mean steps per interval.
 
 ```{r, echo=TRUE}
 ##using gridExtra to arrange the plots at the end
