--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -3,7 +3,7 @@ title: "PA1_template"
 output: 
   html_document: 
     keep_md: yes
-
+keep_md: yes
 ---
 
 This is a response to the Peer-graded Assignment: Course Project 1 for 
